build:  修改 构建命令

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "commit": "cz",
-    "prepare": "husky install"
+    "prepare": "npx husky install"
   },
   "config": {
     "commitizen": {
