--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "git-cz"
+      "path": "cz-conventional-changelog"
     }
   },
   "dependencies": {
@@ -22,7 +22,6 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "git-cz": "^4.8.0",
     "husky": "^7.0.4",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
