--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.1.1",
     "husky": "^7.0.4",
+    "prettier": "2.4.1",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
+    "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.3.0"
   }
 }
