--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "commit": "cz",
     "prepare": "npx husky install",
     "fix": "npx lint-staged -c '.lint-staged-fix'",
-    "fix:eslint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,vue}'"
+    "fix:eslint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,vue}'",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "config": {
     "commitizen": {
@@ -29,6 +30,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "commitizen": "^4.2.4",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
