--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "prettier": "^2.5.0",
     "sass": "^1.43.5",
     "typescript": "^4.4.3",
+    "unplugin-auto-import": "^0.6.6",
+    "unplugin-vue-components": "^0.18.0",
     "vite": "^2.6.4",
     "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.3.0"
